--- a/README.adoc
+++ b/README.adoc
@@ -23,4 +23,7 @@ Actualmente, el código lo mantengo para que busque la selección de monitores e
 |ASUS VP228H (22.0',10.0ms)|http://www.solotodo.com/products/26883-asus-vp228h/
 |ViewSonic VX2457 (24.0',10.0ms)|http://www.solotodo.com/products/25669-viewsonic-vx2457-mhd/
 |ViewSonic XG2401 (24.0',10.0ms)|http://www.solotodo.com/products/25666-viewsonic-xg2401/
+|LG VG278H (27.0',6.0ms)|http://www.solotodo.com/products/25849-asus-vg278hv/
+|Asus VG248QE (24.0',3.0ms)|http://www.solotodo.com/products/13660-asus-vg248qe/
+|Samsung LC24F390FHLX (27.0',4.0ms)|http://www.solotodo.com/products/25606-samsung-lc24f390fhlxzs/
 |========
