actualización de tabla + más búfer de retartdo

--- a/README.adoc
+++ b/README.adoc
@@ -14,14 +14,13 @@ Actualmente, el código lo mantengo para que busque la selección de monitores e
 .Monitores
 |========
 |LG 25UM58-P (25.0',9.0ms) | https://www.solotodo.com/products/24319-lg-25um58
-|ViewSonic VP2468 (24.0',9.0ms) | https://www.solotodo.com/products/43143-viewsonic-vp2468
-|ASUS VP228H (22.0',10.0ms) | https://www.solotodo.com/products/26883-asus-vp228h
-|ASUS VG245H (24.0',10.0ms) | https://www.solotodo.com/products/39664-asus-vg245h-90lm02v0-b013b0
-|ViewSonic XG2401 (24.0',10.0ms) | https://www.solotodo.com/products/25666-viewsonic-xg2401
-|ASUS MG248Q (24.0',10.0ms) | https://www.solotodo.com/products/40059-asus-mg248qr-90lm02d3-b013b0
-|ViewSonic VX2257 (22.0',10.0ms) | https://www.solotodo.com/products/25748-viewsonic-vx2257-mhd
+|ASUS VE278H (27.0',10.0ms) | https://www.solotodo.com/products/15182-asus-ve278h
+|ASUS VP228H (22.0',10.0ms) | https://www.solotodo.com/products/54003-asus-vp228he-90lm01k0-b05170
 |BenQ RL2455 (24.0',10.0ms) | https://www.solotodo.com/products/20149-benq-rl2455hm
-|BenQ XL2411 (24.0',10.0ms) | https://www.solotodo.com/products/39387-benq-xl2411
+|ViewSonic VX2776 (27.0',10.0ms) | https://www.solotodo.com/products/29698-viewsonic-vx2776-smhd
+|ViewSonic XG2401 (24.0',10.0ms) | https://www.solotodo.com/products/25666-viewsonic-xg2401
+|ViewSonic VX2457 (24.0',10.0ms) | https://www.solotodo.com/products/25669-viewsonic-vx2457-mhd
+|Asus VE228H (21.5',7.0ms) | https://www.solotodo.com/products/49570-asus-ve228h
+|BenQ XL2420T (24.0',4.0ms) | https://www.solotodo.com/products/13657-benq-xl2420t
 |Asus VG248QE (24.0',3.0ms) | https://www.solotodo.com/products/13660-asus-vg248qe
-|Samsung LC24F390FHLX (27.0',4.0ms) | https://www.solotodo.com/products/25606-samsung-lc24f390fhlxzs
 |========
